# posting_service_actix_web

./: .gitignore  .prettierrc  Cargo.toml  data.json  vercel.json
src/: handler.rs  main.rs
src/handler/: data.rs
templates/: base.html  home.html  not_found.html  posted.html  posting.html  show.html
